# ninejs

./: .gitignore  .prettierignore  404.html  AGENTS.md  README.md  index.html  justfile  llms.txt  mkdocs.yaml  objects.inv  package-lock.json  package.json  prek.toml  pyproject.toml  search.json  sitemap.xml  test.html  zensical.toml
.github/workflows/: coverage.yml  doc-build.yml  docs.yml  lint.yaml  prettier.yml  test-browser.yml  test-javascript.yml  test-marimo.yml  test-quarto.yml  tests-python.yaml  tests.yaml  type.yaml
contributing/: index.html
docs/: README.qmd  contributing.md  how-it-works.md  how-to-add-an-example.md  index.md  llms.txt
docs/examples/: animation-art.py  animation-hover.py  animation-line.py  animation.py  area-hover-to-show.py  area.py  area_hover_to_show.css  bar_plot.py  choropleth.py  climate-vulnerability-co2.css  climate-vulnerability-co2.py  coal-production.py  coal_production.py  europe-co2.py  europe_co2.py  examples.py  facet.py  grouping.py  household-wealth.py  hover_nearest.py  index.py  javascript.py  line-chart.py  linked-map-bars.py  matplotlib-annotation.py  mondrian.py  mtcars-linked-panels.py  on-click-custom-alert.py  on-click-stroke.py  sao-paulo-hdi.py  south-france-restaurants.py  tooltip-custom.py  tooltip.py  zoom.py
docs/gallery/: area-hover-to-show.md  climate-vulnerability-co2.md  coal-production.md  europe-co2.md  household-wealth.md  index.md  mondrian.md  mtcars-linked-panels.md  sao-paulo-hdi.md  south-france-restaurants.md
docs/guide/: animation.md  css.md  effects.md  javascript.md  jupyter.md  marimo.md  matplotlib.md  onclick.md  positron.md  quarto.md  shiny.md  streamlit.md  tooltip.md  troubleshooting.md  zoom.md
docs/iframes/: animation-art.html  animation-hover.html  animation-line.html  animation.html  area-chart.html  area-hover-to-show.html  bar.html  climate-vulnerability-co2.html  coal-production.html  effects-confetti.html  europe-co2.html  facet_wrap.html  household-wealth.html  hover-neareast.html  hover-nearest.html  index.html  javascript-animate.html  javascript-click-color.html  javascript-hello.html  line.html  linked-map-bars.html  matplotlib-annotation.html  mondrian.html  mtcars-linked-panels.html  on-click-custom-alert.html  on-click-new-window.html  on-click-stroke.html  point.html  quickstart.html  quickstart2.html  saving-rate.html  south-france-restaurants.html  tooltip-custom-css.html  tooltip-custom-css2.html  tooltip-default.html  tooltip-html-injection.html  zoom.html
docs/reference/: add_digit.md  css.md  effects.md  interactive.md  javascript.md  magic-plot.md  save.md
docs/stylesheets/: style.css
examples/: animation-hover.py  area.py  area_hover_to_show.js  coal-production.py  effects-confetti.py  examples.py  facet.py  grouping.py  household-wealth.csv  hover-nearest.py  index.py  line_chart.py  linked-map-bars.py  mtcars-linked-panels.py  on-click-new-window.py  saving-rate.py  tooltip.py  zoom.py
gallery/: index.html
gallery/area-hover-to-show/: index.html
gallery/climate-vulnerability-co2/: index.html
gallery/coal-production/: index.html
gallery/europe-co2/: index.html
gallery/household-wealth/: index.html
gallery/mondrian/: index.html
gallery/mtcars-linked-panels/: index.html
gallery/sao-paulo-hdi/: index.html
gallery/south-france-restaurants/: index.html
how-it-works/: index.html
how-to-add-an-example/: index.html
iframes/: animation-art.html  animation-hover.html  animation-line.html  animation.html  area-chart.html  area-hover-to-show.html  bar.html  climate-vulnerability-co2.html  coal-production.html  effects-confetti.html  europe-co2.html  facet_wrap.html  household-wealth.html  hover-nearest.html  javascript-animate.html  javascript-click-color.html  javascript-hello.html  line.html  linked-map-bars.html  matplotlib-annotation.html  mondrian.html  mtcars-linked-panels.html  on-click-custom-alert.html  on-click-new-window.html  on-click-stroke.html  point.html  quickstart2.html  south-france-restaurants.html  tooltip-custom-css.html  tooltip-custom-css2.html  tooltip-default.html  tooltip-html-injection.html
ninejs/: __init__.py  const.py  css.py  iframe.py  javascript.py  main.py  minify.py  style.py  type.py  typing.py  utils.py
overrides/: main.html
scripts/: benchmark_html.py  coverage.sh  minify_js.py
search/: search_index.json
site/: objects.inv  search.json
stylesheets/: style.css
tests/: _ninejs_assertions.py  test_css.py  test_main.py  test_style.py
(+56 files in other folders)
