[project]
name = "ninejs"
version = "0.0.3"
description = "Bringing interactivity to plotnine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Joseph Barbier", email = "joseph@ysunflower.com" },
]
keywords = [
  "D3",
  "browser",
  "interactivity",
  "plotnine",
  "visualization",
  "web"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "jinja2>=3.0.0",
  "narwhals>=2.0.0",
  "plotnine>=0.13.0",
]

[project.urls]
Documentation = "https://y-sunflower.github.io/ninejs/"
Homepage = "https://y-sunflower.github.io/ninejs/"
Issues = "https://github.com/y-sunflower/ninejs/issues"
Repository = "https://github.com/y-sunflower/ninejs"

[dependency-groups]
dev = [
  "mkdocstrings-python>=1.16.5",
  "prek>=0.4.0",
  "pytest>=8.3.5",
  "ruff>=0.11.13",
  "ty>=0.0.37",
  "zensical>=0.0.42",
]

[build-system]
requires = [
  "setuptools",
  "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ninejs"]

[tool.tombi]
files.exclude = ["prek.toml"]

[tool.uv.sources]
ninejs = { workspace = true }
