[project]
name = "ninejs"
version = "0.0.7"
description = "Bringing interactivity to plotnine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Joseph Barbier", email = "joseph@ysunflower.com" },
]
keywords = [
  "D3",
  "browser",
  "interactivity",
  "plotnine",
  "visualization",
  "web"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "jinja2>=3.0.0",
  "narwhals>=2.0.0",
  "plotnine>=0.12.0",
]

[project.urls]
Documentation = "https://y-sunflower.github.io/ninejs/"
Homepage = "https://y-sunflower.github.io/ninejs/"
Issues = "https://github.com/y-sunflower/ninejs/issues"
Repository = "https://github.com/y-sunflower/ninejs"

[dependency-groups]
dev = [
  "genbadge[coverage]>=1.1.3",
  "geodatasets>=2026.5.1",
  "geopandas>=1.1.3",
  "jupyter>=1.1.1",
  "marimo>=0.23.6",
  "mkdocstrings-python>=1.16.5",
  "polars>=1.40.1",
  "prek>=0.4.0",
  "pyfonts>=1.4.0",
  "pypalettes>=0.2.1",
  "pyrefly>=1.0.0",
  "pytest>=8.3.5",
  "pytest-playwright>=0.8.0",
  "ruff>=0.11.13",
  "shiny>=1.6.1",
  "streamlit>=1.57.0",
  "ty>=0.0.37",
  "zensical>=0.0.42",
]

[build-system]
requires = [
  "setuptools",
  "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.pyrefly]
project-includes = ["**/*.py*"]
project-excludes = ["docs/examples/*.py"]

[tool.setuptools]
packages = ["ninejs"]

[tool.setuptools.package-data]
ninejs = [
  "py.typed",
  "static/*",
]

[tool.tombi]
files.exclude = ["prek.toml"]

[tool.ty.src]
include = ["ninejs"]
exclude = ["docs/examples/*.py"]

[tool.ty.rules]
all = "error"

[tool.uv.sources]
ninejs = { workspace = true }
